<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_custom"
    android:padding="16dp"
    android:layout_margin="2dp">

    <TextView
        android:id="@+id/good_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/name_of_good"
        android:lineSpacingExtra="5sp"
        android:gravity="top"
        android:textSize="16sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/quantity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/good_name_textview"
        android:text="@string/_52"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/good_price_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity_textview"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/_60_00_p"
        android:textColor="@color/white"
        android:layout_marginTop="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>